Minor fix to alignment of menu element

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .menu-icon {
-    display: inline;
+    display: inline-block;
     cursor: pointer;
 }
 
